k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crms
  labels:
    app: crms
    managed-by: kubectl
